--- a/MovieCatalogue/app/build.gradle
+++ b/MovieCatalogue/app/build.gradle
@@ -43,11 +43,16 @@ dependencies {
 
     //UI
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.airbnb.android:lottie:3.6.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //Testing
     testImplementation 'junit:junit:4.+'
